# TelegramBotForCommunication

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
scripts/: enc.py
src/: __init__.py  project.py
src/callbacks/: user.py
src/config/: lmuwj4.py  settings.yml
src/core/: application.py
src/core/application/: telegrambot.py
src/core/domain/: entities.py  webhook.py
src/core/domain/errors/: default.py
src/core/domain/filters/: access.py
src/core/domain/interfaces/database/: profile.py  user.py
src/core/domain/middlewares/: database.py  ensure_user.py  errors.py  logs.py  nats_client.py
src/infrastructure/: keyboard.py
src/infrastructure/configuration/dynaconf_controller/: generate.py  main.py
src/infrastructure/improved_logging/: main.py
src/infrastructure/improved_logging/decorators/async/: catch.py  class_catch.py
src/infrastructure/improved_logging/decorators/sync/: catch.py  class_catch.py
src/infrastructure/logger/: __init__.py  main.py
src/infrastructure/natslib/: client.py  main.py
src/infrastructure/natslib/configuration/: configuration.py
src/infrastructure/natslib/stream/: stream.py
src/infrastructure/repository/: db_schema_readme.md  models.py  query_base.py
src/infrastructure/repository/migrations/: env.py
src/infrastructure/repository/migrations/versions/: 2025_04_25_2144-8b33ed2db061_.py  2025_04_25_2232-0e656364da00_.py  2025_05_10_1349-1ac9e6ef08fc_added_user_model.py  2025_05_10_1440-fc6537756b75_added_field_full_name.py  2025_05_10_1621-1db4e9338b9b_added_freelancer_profile_account_model.py  2025_05_10_1634-f0d923ef1cd7_rename_git.py  (+1 more)
src/infrastructure/repository/postgresql_controller/: models.py  query.py
src/infrastructure/repository/queries/: profile.py  user.py
src/interface/: utils.py
src/interface/api/: ping.py
src/interface/api/errors/: errors.py  template.html
src/interface/handlers/: default.py
src/interface/handlers/profile/: lk.py
src/main/: main.py
src/shared/utils/: keyboard.py
src/use_cases/: profile.py
src/use_cases/services/: profile.py  user.py
(+1 files in other folders)
